# signal_composer

./: README.md  pyproject.toml  setup.py
examples/: simple_signal.ipynb
signal_composer/: __init__.py
tests/: test_compose.py
