[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "signal_composer"
version = "0.0.1"
authors = [
  { name="Danilo Lessa Bernardineli", email="danilo.lessa@gmail.com" },
]
description = "Library for composing signals from arrays and functions."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/danlessa/signal_composer"
"Bug Tracker" = "https://github.com/danlessa/signal_composer/issues"